After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677170 - queue2: Fix property name
queue2: Fix property name
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
unspecified
Other All
: Normal normal
: 0.10.37
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-05-31 09:14 UTC by Bastien Nocera
Modified: 2012-05-31 10:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
queue2: Fix property name (1.51 KB, patch)
2012-05-31 09:14 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2012-05-31 09:14:33 UTC
.
Comment 1 Bastien Nocera 2012-05-31 09:14:35 UTC
Created attachment 215309 [details] [review]
queue2: Fix property name

temp-template, not temp-tmpl
Comment 2 Sebastian Dröge (slomo) 2012-05-31 10:57:07 UTC
commit 6654bd0300215a442dc7bc1c8a4e5b8dd7c07617
Author: Bastien Nocera <hadess@hadess.net>
Date:   Thu May 31 10:10:41 2012 +0100

    queue2: Fix property name in the docs
    
    temp-template, not temp-tmpl
    
    https://bugzilla.gnome.org/show_bug.cgi?id=677170