queue2: Fix property name in the docs

temp-template, not temp-tmpl

https://bugzilla.gnome.org/show_bug.cgi?id=677170